fixed examples to work correctly out of the box

--- a/table_style/style.css
+++ b/table_style/style.css
@@ -13,3 +13,10 @@ body {
   height: 100px;
   float: left;
 }
+tbody, tr {
+  width: 100%;
+}
+table, tbody, td, tr {
+  display: inline-table;
+  border-spacing: 0px;
+}
